--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/crunch/favicon.ico" />
+  <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Crunch Bot" />
@@ -12,7 +12,7 @@
 
 <body>
   <div class="root">
-    <img src="/crunch/static/img/crunchbot-comming-soon.png" alt="Crunch Bot Logo">
+    <img src="/static/img/crunchbot-comming-soon.png" alt="Crunch Bot Logo">
   </div>
 </body>
 <style>
